# Shoot-Craft-AI-Agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: api.md  architecture.md  business-flow.md  fsm.md  plan-flexible-pipeline.md
presets/examples/: README.md  default.yaml  demo_avatar.yaml  demo_headshot.yaml  demo_passport.yaml
scripts/: download_models.py  gate_check.py  load_test.py
src/: config.py  main.py
src/api/: app.py  deps.py  routes.py  sse.py
src/graph/: builder.py  nodes.py  state.py
src/protocols/: __init__.py  brief_parser.py  budget.py  classifier.py  embedder.py  event_bus.py  face_analyzer.py  generator.py  inventory.py  object_storage.py  planner.py  prompt_writer.py  slot_filler.py  state_store.py
src/schemas/: __init__.py  base.py  brief.py  contract.py  enums.py  events.py  inventory.py  presets.py  state.py
src/services/: brief_parser.py  budget.py  classifier.py  estimator.py  facecheck.py  (+12 more)
tests/: api_utils.py  conftest.py  openrouter_mock.py  test_api_e2e.py  test_brief_parser.py  test_budget.py  test_classifier.py  test_concurrency.py  test_estimator.py  test_facecheck.py  test_generation_loop.py  test_graph_e2e.py  test_idempotency.py  test_inventory.py  test_llm_slot_filler.py  test_money.py  test_observability.py  test_openrouter_request.py  test_planner.py  test_preset_matcher.py  test_pricing.py  test_prompt_builder.py  test_prompt_writer.py  test_quality_gate.py  test_redis_outage.py  test_schemas.py  test_skeleton_e2e.py  test_slot_filler.py
(+40 files in other folders)
